crates/tui/tests/snapshots/table__vm_table_filtered.snap
---
source: crates/tui/tests/table.rs
expression: frame.clone()
---
╭ nutsh ─────────────────────────────────────────────────────────────────────────────────────╮
│Context:    -                                                    ⏎ drill        y detail    │       clusters 1  hosts 1
│PC:         127.0.0.1:PORT  pc.2024.3                           S sort         w wide      │         vms 3  on/off 3/0
│Cluster:    <all>                                               ←→ columns     ^r refresh   │           alerts ⚠ 2  ✖ 2
│Kind:       Compute & Storage › VMs                             ^t every       ^x stop      │         tasks ▶ 4 running
│Count:      2 of 3                                               a actions     ^c quit      │
╰────────────────────────────────────────────────────────────────────────────────────────────╯  v0.0.2-beta1 · pc.2024.3
╭ nutsh ───────────────╮╭ Virtual Machines [2 of 3] /web ──────────────────────────────────────────────────────────────╮
│  ▸ Dashboard         ││  NAME                                     POWER  CLUSTER      HOST        IP            MEM  │
│  ▾ Compute & Storage ││▌ web-01                                   ON     lab-cluster  ahv-node-1  203.0.113.11  8 GiB│
│      Overview        ││  web-02                                   OFF    lab-cluster  -           -             4 GiB│
│    • VMs [3]         ││                                                                                              │
│      ESXi VMs        ││                                                                                              │
│      Templates       ││                                                                                              │
│      Images          ││                                                                                              │
│      OVAs            ││                                                                                              │
╰───────────────── ↓34 ╯╰──────────────────────────────────────────────────────────────────────────────────────────────╯
/web█
[meter]          ● live
